--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -101,7 +101,7 @@
   "hotlink_item": { "message": "Ajouter un raccourci copiant les liens de tous les médias d'un tweet"},
   "download_item": { "message": "Ajouter un raccourci pour télécharger tous les médias d'un tweet"},
   "download_filename_format": { "message": "Format du nom des fichiers téléchargés"},
-  "download_filename_format_parameters": { "message": "Vous pouvez utiliser les variables suivantes: <code>{{postedUser}} {{fileName}} {{fileExtension}}</code>"},
+  "download_filename_format_parameters": { "message": "Vous pouvez utiliser les variables suivantes: <code>{{postedUser}} {{tweetId}} {{fileName}} {{fileExtension}}</code>"},
   "ctrl_changes_interactions": { "message": "Tenir <kbd>Ctrl</kbd> (<kbd>Cmd</kbd> sur Mac) et cliquer like / retweet / download / hotlink permet de suivre l'auteur du tweet depuis le compte appartenant à la colonne."},
   "ctrl_changes_interactions__enabled": { "message": "Maintenir <kbd>Ctrl</kbd> (<kbd>Cmd</kbd> sur Mac) et cliquer sur like / retweet / download / hotlink permet de suivre l'auteur/autrice du tweet depuis" },
   "ctrl_changes_interactions__mode__owner": { "message": "le compte relié à la colonne" },
