--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,10 +1,11 @@
 {
   "appDesc": {
-		"message": "Emojis, thumbnails and advanced features for https://tweetdeck.twitter.com !"
-	},
-	"appName": {
-		"message": "BetterTweetDeck"
-	},
+    "message":
+      "Emojis, thumbnails and advanced features for https://tweetdeck.twitter.com !"
+  },
+  "appName": {
+    "message": "BetterTweetDeck"
+  },
   "shareOnTD": { "message": "Share on TweetDeck" },
   "settingsTitle": { "message": "Better TweetDeck Settings" },
   "settings": { "message": "Settings" },
@@ -21,14 +22,20 @@
   "sec_preview": { "message": "Preview" },
   "sec_general": { "message": "General" },
 
-  "title_timeDisplay": { "message": "Time display style"},
+  "title_timeDisplay": { "message": "Time display style" },
   "time_relative": { "message": "Relative" },
   "time_absolute": { "message": "Absolute" },
   "time_absolute_us": { "message": "Absolute US Style" },
-  "time_custom": { "message": "Custom (<a target='_blank' href='https://github.com/taylorhakes/fecha#formatting-tokens'>Formatting help</a>)" },
+  "time_custom": {
+    "message":
+      "Custom (<a target='_blank' href='https://github.com/taylorhakes/fecha#formatting-tokens'>Formatting help</a>)"
+  },
   "time_short": { "message": "Short" },
   "time_full": { "message": "Full" },
-  "time_full24": { "message": "Display full date after 24h <small>Applies only for non-relative timestamps</small>" },
+  "time_full24": {
+    "message":
+      "Display full date after 24h <small>Applies only for non-relative timestamps</small>"
+  },
 
   "title_nameDisplay": { "message": "Name display style" },
 
@@ -36,108 +43,206 @@
   "name_inverted": { "message": "@Username Full name" },
   "name_username": { "message": "@Username" },
   "name_full": { "message": "Full name" },
-  "name_typeahead": { "message": "The auto-completion displays only usernames" },
+  "name_typeahead": {
+    "message": "The auto-completion displays only usernames"
+  },
 
   "title_avatars": { "message": "Avatars & details" },
-  "old_replies": { "message": "Revert to the old replies style (pre 03/30/2017)" },
+  "old_replies": {
+    "message": "Revert to the old replies style (pre 03/30/2017)"
+  },
   "css_round_pic": { "message": "Make avatars rounded" },
   "css_bigger_emojis": { "message": "Make emojis bigger in tweets" },
-  "css_character_count": { "message": "Always show the character count instead of the circular progress bar" },
+  "css_character_count": {
+    "message":
+      "Always show the character count instead of the circular progress bar"
+  },
   "css_collapse_dms": { "message": "Collapse read direct messages" },
   "css_system_fonts": { "message": "Use the system font in the UI" },
-  "css_show_verified": { "message": "Show 'verified' badges on top of avatars" },
+  "css_show_verified": {
+    "message": "Show 'verified' badges on top of avatars"
+  },
   "css_hide_context": { "message": "Hide 'In reply to' label on mentions" },
   "css_actions_on_right": { "message": "Show tweet actions on the right" },
   "css_actions_on_hover": { "message": "Show tweet actions on hover" },
-  "css_no_bg_modal": { "message": "Hide background behind fullscreen previews" },
+  "css_no_bg_modal": {
+    "message": "Hide background behind fullscreen previews"
+  },
   "css_slim_scrollbars": { "message": "Thinner scrollbars" },
   "pause_scroll_on_hover": { "message": "Pause column scrolling on hover" },
-  "css_show_provider_indicator": { "message": "Show thumbnails' source on top of them" },
-  "css_hide_like_rt_indicators": { "message": "Hide Like/RT indicators on top of tweets" },
-  "make_search_columns_first": { "message": "Add search columns in front of first column" },
+  "css_show_provider_indicator": {
+    "message": "Show thumbnails' source on top of them"
+  },
+  "css_hide_like_rt_indicators": {
+    "message": "Hide Like/RT indicators on top of tweets"
+  },
+  "make_search_columns_first": {
+    "message": "Add search columns in front of first column"
+  },
   "no_hearts": { "message": "Show stars instead of hearts" },
   "rtl_text_style": { "message": "Detect and apply RTL style when needed" },
   "flash_tweets": { "message": "Make tweets flash in:" },
   "flash_tweets_mentions": { "message": "Mentions columns" },
   "flash_tweets_all": { "message": "Every column" },
 
-  "update_title_on_notifications": { "message": "Display an unread tweets/DMs indicator in TweetDeck's tab's title" },
+  "update_title_on_notifications": {
+    "message":
+      "Display an unread tweets/DMs indicator in TweetDeck's tab's title"
+  },
 
   "share_request": { "message": "Request tabs reading permissions" },
   "share_granted": { "message": "Permissions granted" },
   "shared_btd_h1": { "message": "Sharing" },
-  "share_btd_p1": { "message": " In order to use the \"Share on TweetDeck\" feature, you'll need to approve certain permissions which you can do by clicking below" },
-  "share_btd_p2": { "message": "Better TweetDeck <strong>cannot</strong> read the content of your tabs and doesn't track it." },
-  "share_btd_p3": { "message": "Feel free to read <a href=\"https://developer.chrome.com/extensions/tabs\">Google's documentation</a> about this permission for more details." },
-  "share_btd_p4": { "message": "Any modification on this page will be applied after a browser restart" },
-  "share_btd_item": { "message": "Add the 'Share on Better TweetDeck' action on contextual menu" },
-  "share_short_txt": { "message": "Shorten the selected text while using the 'Share on Better TweetDeck' action" },
+  "share_btd_p1": {
+    "message":
+      " In order to use the \"Share on TweetDeck\" feature, you'll need to approve certain permissions which you can do by clicking below"
+  },
+  "share_btd_p2": {
+    "message":
+      "Better TweetDeck <strong>cannot</strong> read the content of your tabs and doesn't track it."
+  },
+  "share_btd_p3": {
+    "message":
+      "Feel free to read <a href=\"https://developer.chrome.com/extensions/tabs\">Google's documentation</a> about this permission for more details."
+  },
+  "share_btd_p4": {
+    "message":
+      "Any modification on this page will be applied after a browser restart"
+  },
+  "share_btd_item": {
+    "message": "Add the 'Share on Better TweetDeck' action on contextual menu"
+  },
+  "share_short_txt": {
+    "message":
+      "Shorten the selected text while using the 'Share on Better TweetDeck' action"
+  },
   "no_tco": { "message": "Remove t.co redirection on links" },
   "no_gif_pp": { "message": "Stop GIFs from playing in avatars" },
   "thumbnails_from": { "message": "Display thumbnails from:" },
 
   "css_minimal_mode": { "message": "Enable the 'Minimal' theme" },
-  "css_og_dark_theme": { "message": "Re-enable the Dark theme (pre February 2018)" },
-  "css_experimental_warning": { "message": "This is experimental and can break at any point!" },
+  "css_og_dark_theme": {
+    "message": "Re-enable the Dark theme (pre February 2018)"
+  },
+  "css_experimental_warning": {
+    "message": "This is experimental and can break at any point!"
+  },
   "css_no_play_btn": { "message": "Hide the play button on video thumbnails" },
-  "css_hide_url_thumb": { "message": "Hide the link related to thumbnails in tweets (à la Twitter iOS/Android)" },
+  "css_hide_url_thumb": {
+    "message":
+      "Hide the link related to thumbnails in tweets (à la Twitter iOS/Android)"
+  },
   "css_no_col_icns": { "message": "Hide icons in columns headers" },
-  "css_small_icns_compose": { "message": "Make buttons smaller in the Compose panel" },
+  "css_small_icns_compose": {
+    "message": "Make buttons smaller in the Compose panel"
+  },
   "css_no_scrollbars": { "message": "Hide scrollbars" },
-  "css_gray_icns_notifs": { "message": "Display notifications icons in grayscale" },
+  "css_gray_icns_notifs": {
+    "message": "Display notifications icons in grayscale"
+  },
 
   "custom_width_columns": { "message": "Apply a custom width for columns:" },
   "custom_width_size": { "message": "Width (any valid CSS value)" },
-  "css_warning": { "message": "Be sure of what you're typing here, don't paste something you don't understand!" },
+  "css_warning": {
+    "message":
+      "Be sure of what you're typing here, don't paste something you don't understand!"
+  },
 
-  "clear_column_action": { "message": "Add a column header button to clear a column"},
-  "collapse_columns": { "message": "Add a column header button to collapse and uncollapse columns"},
-  "collapse_columns_pause": { "message": "When you collapse a column, it will pause the feed it so that it can light up when its contents change while collapsed and it stays where you last saw it"},
-  "uncollapse_columns_unpause": { "message": "When you uncollapse a column, it will unpause the feed it so that it automatically scrolls back to the top instead of staying where you left it"},
+  "clear_column_action": {
+    "message": "Add a column header button to clear a column"
+  },
+  "collapse_columns": {
+    "message": "Add a column header button to collapse and uncollapse columns"
+  },
+  "collapse_columns_pause": {
+    "message":
+      "When you collapse a column, it will pause the feed it so that it can light up when its contents change while collapsed and it stays where you last saw it"
+  },
+  "uncollapse_columns_unpause": {
+    "message":
+      "When you uncollapse a column, it will unpause the feed it so that it automatically scrolls back to the top instead of staying where you left it"
+  },
 
-  "edit_item": { "message": "Add an edit item in tweets' menu"},
-  "edit_item_note": { "message": "You cannot use this to edit tweets without deleting them! This immediately moves a tweet to the composer dock and deletes it along with any likes or retweets it received!"},
-  "favstar_item": { "message": "Add a \"Show in Favstar\" item in tweets' menu"},
-  "mute_hashtags": { "message": "Add shortcuts to mute #hashtags in tweets' menu"},
-  "mute_source": { "message": "Add a shortcut to mute the source (application) of a tweet in tweets' menu"},
-  "hotlink_item": { "message": "Add shortcut to copy the links of all media in a tweet"},
-  "download_item": { "message": "Add shortcut to download all media of a tweet"},
-  "download_filename_format": { "message": "Download file name format"},
-  "download_filename_format_parameters": { "message": "You can use the following variables: <code>{{postedUser}} {{tweetId}} {{fileName}} {{fileExtension}}</code>"},
-  "ctrl_changes_interactions__enabled": { "message": "Holding <kbd>Ctrl</kbd> (or <kbd>Cmd</kbd> on Mac) while clicking: favorite / retweet / download will allow you to follow from the"},
-  "ctrl_changes_interactions__mode__owner": { "message": "column's owner"},
-  "ctrl_changes_interactions__mode__dialog": { "message": "follow dialog"},
+  "edit_item": { "message": "Add an edit item in tweets' menu" },
+  "edit_item_note": {
+    "message":
+      "You cannot use this to edit tweets without deleting them! This immediately moves a tweet to the composer dock and deletes it along with any likes or retweets it received!"
+  },
+  "mute_hashtags": {
+    "message": "Add shortcuts to mute #hashtags in tweets' menu"
+  },
+  "mute_source": {
+    "message":
+      "Add a shortcut to mute the source (application) of a tweet in tweets' menu"
+  },
+  "hotlink_item": {
+    "message": "Add shortcut to copy the links of all media in a tweet"
+  },
+  "download_item": {
+    "message": "Add shortcut to download all media of a tweet"
+  },
+  "download_filename_format": { "message": "Download file name format" },
+  "download_filename_format_parameters": {
+    "message":
+      "You can use the following variables: <code>{{postedUser}} {{tweetId}} {{fileName}} {{fileExtension}}</code>"
+  },
+  "ctrl_changes_interactions__enabled": {
+    "message":
+      "Holding <kbd>Ctrl</kbd> (or <kbd>Cmd</kbd> on Mac) while clicking: favorite / retweet / download will allow you to follow from the"
+  },
+  "ctrl_changes_interactions__mode__owner": { "message": "column's owner" },
+  "ctrl_changes_interactions__mode__dialog": { "message": "follow dialog" },
   "keep_hashtags": { "message": "Keep tweeted hashtags in the compose box." },
 
   "btd_thx": { "message": "Thanks for installing Better TweetDeck!" },
   "btd_get_started": { "message": "Let's get started!" },
-  "btd_whatsBTD": { "message": "Better TweetDeck is made to improve your experience on <a href='https://tweetdeck.twitter.com'>tweetdeck.twitter.com</a>!" },
-  "btd_default": { "message": "The default settings have been applied, feel free to modify them to your liking!" },
+  "btd_whatsBTD": {
+    "message":
+      "Better TweetDeck is made to improve your experience on <a href='https://tweetdeck.twitter.com'>tweetdeck.twitter.com</a>!"
+  },
+  "btd_default": {
+    "message":
+      "The default settings have been applied, feel free to modify them to your liking!"
+  },
   "btd_then": { "message": "Then?" },
-  "btd_follow": { "message": "You should follow <a href='https://twitter.com/BetterTDeck'>@BetterTDeck</a> on Twitter for support, news and trivia about Better TweetDeck!" },
+  "btd_follow": {
+    "message":
+      "You should follow <a href='https://twitter.com/BetterTDeck'>@BetterTDeck</a> on Twitter for support, news and trivia about Better TweetDeck!"
+  },
 
   "sec_infos": { "message": "Informations" },
   "debug_version": { "message": "Version" },
   "debug_ua": { "message": "User-Agent" },
   "sec_settings": { "message": "Settings dump" },
 
-  "credits_author":  { "message": "Author" },
-  "credits_contribs":  { "message": "Contributors" },
-  "credits_rsrc":  { "message": "Resources used" },
-  "credits_links":  { "message": "Links" },
-  "credits_twitter":  { "message": "Better TweetDeck on Twitter" },
-  "credits_bugs":  { "message": "Bugs or suggestions" },
-  "credits_source":  { "message": "Source on GitHub" },
-  "credits_author_website":  { "message": "Author's website" },
+  "credits_author": { "message": "Author" },
+  "credits_contribs": { "message": "Contributors" },
+  "credits_rsrc": { "message": "Resources used" },
+  "credits_links": { "message": "Links" },
+  "credits_twitter": { "message": "Better TweetDeck on Twitter" },
+  "credits_bugs": { "message": "Bugs or suggestions" },
+  "credits_source": { "message": "Source on GitHub" },
+  "credits_author_website": { "message": "Author's website" },
 
-  "save_no":  { "message": "No changes" },
-  "save_save":  { "message": "Save changes" },
+  "save_no": { "message": "No changes" },
+  "save_save": { "message": "Save changes" },
 
-  "donate_title":  { "message": "Help me to maintain Better TweetDeck!" },
-  "donate_p3":  { "message": "Thanks a bunch for using Better TweetDeck and helping it live!" },
-  "donate_p2":  { "message": "If you can afford it and feel generous, it would be <strong>wonderful</strong> if you could <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted'>donate on Paypal</a>.<br><br>Even the smallest contribution is helping!" },
-  "donate_p1": { "message": "Better TweetDeck is and always will be <strong>free of charge</strong> but developing it takes time and keeping it live costs money!"},
+  "donate_title": { "message": "Help me to maintain Better TweetDeck!" },
+  "donate_p3": {
+    "message": "Thanks a bunch for using Better TweetDeck and helping it live!"
+  },
+  "donate_p2": {
+    "message":
+      "If you can afford it and feel generous, it would be <strong>wonderful</strong> if you could <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted'>donate on Paypal</a>.<br><br>Even the smallest contribution is helping!"
+  },
+  "donate_p1": {
+    "message":
+      "Better TweetDeck is and always will be <strong>free of charge</strong> but developing it takes time and keeping it live costs money!"
+  },
 
-  "notification_title":  { "message": "Better TweetDeck Upgrade" },
-  "notification_upgrade":  { "message": "Better TweetDeck has been upgraded to v{{version}}. Click for more information." }
+  "notification_title": { "message": "Better TweetDeck Upgrade" },
+  "notification_upgrade": {
+    "message":
+      "Better TweetDeck has been upgraded to v{{version}}. Click for more information."
+  }
 }
