--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -36,6 +36,10 @@
     "message":
       "24時間以上経過したツイートをフル表示にする <small>相対表示を除く</small>"
   },
+  "parse_sf": {
+    "message":
+      "Parse date from SnowFlake<small>Time in milliseconds can be displayed</small>"
+  },
 
   "title_nameDisplay": { "message": "名前の表示スタイル" },
 
